RESOLVED FIXED278625
Ignore -Wthread-safety-reference-return warnings in WebCore with upstream clang
https://bugs.webkit.org/show_bug.cgi?id=278625
Summary Ignore -Wthread-safety-reference-return warnings in WebCore with upstream clang
David Kilzer (:ddkilzer)
Reported 2024-08-25 10:04:01 PDT
Fix -Wthread-safety-reference-return warnings in WebCore with upstream clang. Example warnings: In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource285.cpp:8: In file included from Source/WebCore/page/ShadowRealmGlobalScope.cpp:27: In file included from Source/WebCore/page/ShadowRealmGlobalScope.h:28: In file included from Source/WebCore/bindings/js/JSShadowRealmGlobalScopeBase.h:28: Source/WebCore/bindings/js/JSDOMGlobalObjectInlines.h:43:12: error: returning variable 'm_structures' by reference requires holding lock 'm_gcLock' exclusively [-Werror,-Wthread-safety-reference-return] 43 | return m_structures; | ^ Source/WebCore/bindings/js/JSDOMGlobalObjectInlines.h:49:12: error: returning variable 'm_guardedObjects' by reference requires holding lock 'm_gcLock' exclusively [-Werror,-Wthread-safety-reference-return] 49 | return m_guardedObjects; | ^ 2 errors generated. In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource450.cpp:2: In file included from Source/WebCore/workers/shared/SharedWorkerGlobalScope.cpp:31: Source/WebCore/dom/MessageEvent.h:78:43: error: returning variable 'm_data' by reference requires holding lock 'm_concurrentDataAccessLock' [-Werror,-Wthread-safety-reference-return] 78 | const DataType& data() const { return m_data; } | ^ 1 error generated. In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource179.cpp:1: In file included from Source/WebCore/dom/TrustedTypePolicy.cpp:27: Source/WebCore/dom/TrustedTypePolicy.h:60:62: error: returning variable 'm_options' by reference requires holding lock 'm_lock' [-Werror,-Wthread-safety-reference-return] 60 | const TrustedTypePolicyOptions& options() const { return m_options; } | ^ 1 error generated. In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource261.cpp:2: Source/WebCore/loader/MediaResourceLoader.cpp:174:12: error: returning variable 'm_crossOriginMode' by reference requires holding is current 'mainThread' [-Werror,-Wthread-safety-reference-return] 174 | return m_crossOriginMode; | ^ 1 error generated. In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource331.cpp:2: Source/WebCore/platform/graphics/MediaSourcePrivate.cpp:265:12: error: returning variable 'm_liveSeekable' by reference requires holding lock 'm_lock' [-Werror,-Wthread-safety-reference-return] 265 | return m_liveSeekable; | ^ 1 error generated. In file included from WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource50-mm.mm:3: Source/WebCore/platform/network/cocoa/RangeResponseGenerator.mm:101:12: error: returning variable 'm_map' by reference requires holding mutex 'm_targetDispatcher' exclusively [-Werror,-Wthread-safety-reference-return] 101 | return m_map; | ^ 1 error generated.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-25 10:04:18 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-08-25 10:19:17 PDT
David Kilzer (:ddkilzer)
Comment 3 2024-08-27 13:51:52 PDT
Committed 282816@main (1baa85f): https://commits.webkit.org/282816@main Reviewed commits have been landed. Closing PR #32685 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.