Fix -Wthread-safety-reference-return warnings in WebCore with upstream clang <https://bugs.webkit.org/show_bug.cgi?id=278625> <rdar://134653057>

Reviewed by Chris Dumez.

Use IGNORE_CLANG_WARNINGS_BEGIN/IGNORE_CLANG_WARNINGS_END to ignore
-Wthread-safety-reference-return warnings.

* Source/WebCore/bindings/js/JSDOMGlobalObjectInlines.h:
(WebCore::JSDOMGlobalObject::structures):
(WebCore::JSDOMGlobalObject::guardedObjects):
* Source/WebCore/dom/MessageEvent.h:
* Source/WebCore/dom/TrustedTypePolicy.h:
(WebCore::TrustedTypePolicy::options const):
* Source/WebCore/loader/MediaResourceLoader.cpp:
(WebCore::MediaResourceLoader::crossOriginMode const):
* Source/WebCore/platform/graphics/MediaSourcePrivate.cpp:
(WebCore::MediaSourcePrivate::liveSeekableRange const):
* Source/WebCore/platform/network/cocoa/RangeResponseGenerator.mm:
(WebCore::RangeResponseGenerator::map):

Canonical link: https://commits.webkit.org/282816@main