Source/WebCore/dom/MessageEvent.h
@@ -75,7 +75,12 @@ public:
     const std::optional<MessageEventSource>& source() const { return m_source; }
     const Vector<Ref<MessagePort>>& ports() const { return m_ports; }
 
-    const DataType& data() const { return m_data; }
+    const DataType& data() const
+    {
+        IGNORE_CLANG_WARNINGS_BEGIN("thread-safety-reference-return")
+        return m_data;
+        IGNORE_CLANG_WARNINGS_END
+    }
 
     JSValueInWrappedObject& jsData() { return m_jsData; }
     JSValueInWrappedObject& cachedData() { return m_cachedData; }
